--- a/sellsavvy/src/app/forms/register/register.component.html
+++ b/sellsavvy/src/app/forms/register/register.component.html
@@ -1,3 +1,40 @@
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <button type="submit" [disabled]="!registerForm.valid">Submit</button>
+<form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="form">
+  <mat-form-field>
+    <mat-label>First name</mat-label>
+    <input matInput type="text" formControlName="firstName" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Last name</mat-label>
+    <input matInput type="text" formControlName="lastName" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>User name</mat-label>
+    <input matInput type="text" formControlName="userName" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Phone number</mat-label>
+    <input matInput type="text" formControlName="phoneNumber" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Description</mat-label>
+    <textarea matInput formControlName="description"></textarea>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>E-mail address</mat-label>
+    <input matInput type="email" formControlName="email" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Confirm e-mail address</mat-label>
+    <input matInput type="email" formControlName="confirmEmail" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Password</mat-label>
+    <input matInput type="password" formControlName="password" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Confirm password</mat-label>
+    <input matInput type="password" formControlName="confirmPassword" />
+  </mat-form-field>
+
+  <button mat-raised-button color="primary" type="submit" [disabled]="!registerForm.valid">Submit</button>
 </form>
