Add profile method

--- a/sellsavvy/src/app/forms/login/login/login.component.html
+++ b/sellsavvy/src/app/forms/login/login/login.component.html
@@ -13,3 +13,4 @@
 </form>
 
 <button mat-raised-button color="primary" (click)="getArticles()">Get articles</button>
+<button mat-raised-button color="secondary" (click)="getProfile()">Get profile</button>
