Add SCSS to registration form

--- a/sellsavvy/src/app/forms/register/register.component.html
+++ b/sellsavvy/src/app/forms/register/register.component.html
@@ -36,5 +36,12 @@
     <input matInput type="password" formControlName="confirmPassword" />
   </mat-form-field>
 
-  <button mat-raised-button color="primary" type="submit" [disabled]="!registerForm.valid">Submit</button>
+  <button
+    mat-raised-button
+    color="primary"
+    type="submit"
+    [disabled]="!registerForm.valid"
+  >
+    Submit
+  </button>
 </form>
