Replace paragraph with mat-error element for error logging in login form

--- a/sellsavvy/src/app/forms/login/login.component.html
+++ b/sellsavvy/src/app/forms/login/login.component.html
@@ -14,6 +14,6 @@
   </form>
 
   @if (displayError) {
-  <p class="form-error">Error logging in. Check credentials and try again.</p>
+  <mat-error>Error logging in. Check credentials and try again.</mat-error>
   }
 </div>
