--- a/sellsavvy/src/app/forms/article-form/article-form.component.html
+++ b/sellsavvy/src/app/forms/article-form/article-form.component.html
@@ -1,3 +1,20 @@
+@if (isLoading) {
+<div class="spinner-container">
+  <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+</div>
+} @else if(isFormSubmitted) {
+<success-card
+  [title]="'Article posted!'"
+  [message]="'Your article have been successfully posted to SellSavvy!'"
+></success-card
+>} @else if(isFormSubmittedWithErrors) {
+<fail-card
+  [title]="'Fail!'"
+  [message]="
+    'An error occurred trying to post your article! Please try again later!'
+  "
+></fail-card>
+} @else {
 <div class="form-container">
   <form [formGroup]="articleForm" (ngSubmit)="onSubmit()" class="form">
     <mat-form-field>
@@ -31,3 +48,4 @@
     </button>
   </form>
 </div>
+}
