--- a/sellsavvy/src/app/pages/article-page/article-page.component.html
+++ b/sellsavvy/src/app/pages/article-page/article-page.component.html
@@ -23,16 +23,19 @@
   <div class="article-reviews">
     <h3 class="reviews-title">Reviews</h3>
 
-    <div class="review" *ngFor="let review of article?.reviews">
+    <div class="review" *ngFor="let review of reviews?.items">
       <mat-icon *ngIf="review.rating" class="review-rating">star</mat-icon>
       {{ review.rating }}/5
       <p class="review-comment">{{ review.comment }}</p>
-      <p class="review-reviewer">— Reviewer</p>
+      <p class="review-reviewer">
+        — {{ review.user?.firstName ?? "Anonymous" }},
+        {{ review.user?.lastName ?? "User" }}
+      </p>
     </div>
 
     <div class="new-review">
       <h3>Leave a Review</h3>
-      <form>
+      <form [formGroup]="reviewForm" (ngSubmit)="onSubmitReview()">
         <mat-form-field>
           <mat-label>Rating</mat-label>
           <input
