--- a/sellsavvy/src/app/components/nav/custom-sidenav/custom-sidenav.component.scss
+++ b/sellsavvy/src/app/components/nav/custom-sidenav/custom-sidenav.component.scss
@@ -1,5 +1,5 @@
 @use "@angular/material" as mat;
-@import "../../../styles.scss";
+@import "../../../../styles.scss";
 
 :host * {
   transition: all 500ms ease-in-out;
