--- a/sellsavvy/src/app/components/nav/navigation/navigation.component.html
+++ b/sellsavvy/src/app/components/nav/navigation/navigation.component.html
@@ -8,6 +8,7 @@
     <custom-sidenav [collapsed]="collapsed()"></custom-sidenav>
   </mat-sidenav>
   <mat-sidenav-content class="content" [style.margin-left]="sidenavWidth()">
+    <product-card></product-card>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
