Create single file upload component

--- a/sellsavvy/src/app/components/nav/navigation/navigation.component.html
+++ b/sellsavvy/src/app/components/nav/navigation/navigation.component.html
@@ -8,6 +8,7 @@
     <custom-sidenav [collapsed]="collapsed()"></custom-sidenav>
   </mat-sidenav>
   <mat-sidenav-content class="content" [style.margin-left]="sidenavWidth()">
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
+    <single-file-upload></single-file-upload>
   </mat-sidenav-content>
 </mat-sidenav-container>
