Add profile page

--- a/sellsavvy/src/app/components/nav/navigation/navigation.component.html
+++ b/sellsavvy/src/app/components/nav/navigation/navigation.component.html
@@ -8,7 +8,6 @@
     <custom-sidenav [collapsed]="collapsed()"></custom-sidenav>
   </mat-sidenav>
   <mat-sidenav-content class="content" [style.margin-left]="sidenavWidth()">
-    <!-- <router-outlet></router-outlet> -->
-    <single-file-upload></single-file-upload>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
