--- a/sellsavvy/src/app/pages/profile-page/profile-page.component.html
+++ b/sellsavvy/src/app/pages/profile-page/profile-page.component.html
@@ -1,1 +1,20 @@
-<p>profile-page works!</p>
+<div class="user-info-container">
+    <img
+    [width]="32"
+    [height]="32"
+    src="https://cdn.pixabay.com/photo/2018/08/28/12/41/avatar-3637425_640.png"
+    priority
+    alt="profile picture"
+  />
+
+  <h2>Florin Marut</h2>
+
+  <section class="contact-info">
+    <p><strong>Phone:</strong> number</p>
+    <p><strong>Email:</strong> email</p>
+  </section>
+
+  <button mat-raised-button color=primary>Edit profile</button>
+
+  <h2>Addresses</h2>
+</div>
