--- a/sellsavvy/src/app/pages/unauthorized-page/unauthorized-page.component.html
+++ b/sellsavvy/src/app/pages/unauthorized-page/unauthorized-page.component.html
@@ -1,1 +1,4 @@
-<p>unauthorized-page works!</p>
+<div class="unauthorized-container">
+  <h2 class="error-title">Access Denied</h2>
+  <p>You are not authorized to view this content.</p>
+</div>
