Add file upload component to profile page

--- a/sellsavvy/src/app/components/single-file-upload/single-file-upload.component.html
+++ b/sellsavvy/src/app/components/single-file-upload/single-file-upload.component.html
@@ -1,4 +1,4 @@
-<button type="button" mat-raised-button (click)="fileInput.click()">Choose File</button>
+<button type="button" mat-raised-button (click)="fileInput.click()">{{chooseFileMessage}}</button>
 <input hidden #fileInput type="file" class="file-input" (change)="onChange($event)" #fileUpload />
 
 @if(file) {
