Add profile update form

--- a/sellsavvy/src/app/pages/profile-page/profile-page.component.html
+++ b/sellsavvy/src/app/pages/profile-page/profile-page.component.html
@@ -18,7 +18,7 @@
     <p><strong>Email:</strong> {{ user?.email }}</p>
   </section>
 
-  <button mat-raised-button color="primary">Edit profile</button>
+  <button mat-raised-button color="primary" (click)="openEditForm()">Edit profile</button>
 
   <h2>Addresses</h2>
 </div>
