Add address form

--- a/sellsavvy/src/app/pages/profile-page/profile-page.component.html
+++ b/sellsavvy/src/app/pages/profile-page/profile-page.component.html
@@ -21,4 +21,5 @@
   <button mat-raised-button color="primary" (click)="openEditForm()">Edit profile</button>
 
   <h2>Addresses</h2>
+  <button mat-raised-button color="primary" (click)="openAddressForm()">Add address</button>
 </div>
