--- a/sellsavvy/src/app/components/address/address.component.html
+++ b/sellsavvy/src/app/components/address/address.component.html
@@ -1,3 +1,15 @@
 <mat-card>
-    
+  <mat-card-header>
+    <mat-card-title
+      >{{ address.city }}, {{ states.get(address.state) }},
+      {{ countries.get(address.country) }}</mat-card-title
+    >
+  </mat-card-header>
+  <mat-card-content>
+    <span>{{ address.street }}, {{ address.zip }}</span>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button color="primary" (click)="edit()">Edit</button>
+    <button mat-button color="primary" (click)="onDelete()">Delete</button>
+  </mat-card-actions>
 </mat-card>
