--- a/sellsavvy/src/app/components/paged-table/paged-table.component.html
+++ b/sellsavvy/src/app/components/paged-table/paged-table.component.html
@@ -1,6 +1,7 @@
 <mat-grid-list [cols]="columns" rowHeight="400px">
-  <mat-grid-tile><product-card></product-card></mat-grid-tile>
-  <mat-grid-tile><product-card></product-card></mat-grid-tile>
-  <mat-grid-tile><product-card></product-card></mat-grid-tile>
-  <mat-grid-tile><product-card></product-card></mat-grid-tile>
+  @for(article of articles; track article){
+  <mat-grid-tile
+    ><product-card [article]="article"></product-card
+  ></mat-grid-tile>
+  }
 </mat-grid-list>
