Implement add cart item functionality

--- a/sellsavvy/src/app/pages/articles-page/articles-page.component.html
+++ b/sellsavvy/src/app/pages/articles-page/articles-page.component.html
@@ -1,1 +1,1 @@
-<paged-table [articles]="pagedArticles?.items"></paged-table>
+<paged-table [loggedInUser]="user" [articles]="pagedArticles?.items"></paged-table>
