--- a/sellsavvy/src/app/components/product-card/product-card.component.html
+++ b/sellsavvy/src/app/components/product-card/product-card.component.html
@@ -12,7 +12,7 @@
   </mat-card-content>
 
   <mat-card-actions>
-    <button class="product-card-button" mat-raised-button color="primary">
+    <button class="product-card-button" mat-raised-button color="primary" (click)="addToCart()">
       Add to Cart
     </button>
     <button mat-button color="primary" (click)="viewProduct()">View</button>
