--- a/sellsavvy/src/app/pages/articles-page/articles-page.component.html
+++ b/sellsavvy/src/app/pages/articles-page/articles-page.component.html
@@ -1,1 +1,4 @@
-<paged-table [loggedInUser]="user" [articles]="pagedArticles?.items"></paged-table>
+@if (canEdit) {
+    <button mat-raised-button color="primary" (click)="addProduct()">Add new product</button>
+}
+<paged-table [loggedInUser]="user" [articles]="pagedArticles?.items" [canEdit]="canEdit"></paged-table>
