--- a/sellsavvy/src/app/components/cart-item/cart-item.component.html
+++ b/sellsavvy/src/app/components/cart-item/cart-item.component.html
@@ -5,7 +5,7 @@
   <mat-card-content>{{ item.article.description }}</mat-card-content>
   <mat-card-actions>
     <button mat-button color="primary" (click)="viewProduct()">View</button>
-    <button mat-button color="primary" (click)="remove()">
+    <button mat-button color="primary" (click)="removeItem()">
       Remove from cart
     </button>
   </mat-card-actions>
