--- a/sellsavvy/src/app/components/cart-item/cart-item.component.html
+++ b/sellsavvy/src/app/components/cart-item/cart-item.component.html
@@ -1,8 +1,8 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>{{ item.article.title }}</mat-card-title>
+    <mat-card-title>{{ item.product.title }}</mat-card-title>
   </mat-card-header>
-  <mat-card-content>{{ item.article.description }}</mat-card-content>
+  <mat-card-content>{{ item.product.description }}</mat-card-content>
   <mat-card-actions>
     <button mat-button color="primary" (click)="viewProduct()">View</button>
     <button mat-button color="primary" (click)="removeItem()">
