--- a/sellsavvy/src/app/components/product-card/product-card.component.html
+++ b/sellsavvy/src/app/components/product-card/product-card.component.html
@@ -1,29 +1,23 @@
 <mat-card class="product-card">
-  <mat-card-header>
-    <mat-card-title>{{product.title}}</mat-card-title>
-  </mat-card-header>
-  <img
-    mat-card-image
-    src="https://picsum.photos/id/1005/200/150"
-    alt="Product Photo"
-  />
-  <mat-card-content>
-    <p class="product-card-price">{{product.price}} RON</p>
+  <mat-card-content> 
+    <h2>{{ product.title }}</h2>
+    <img mat-card-image src="https://picsum.photos/id/1005/200/150" alt="Product Photo" />
+    <span>{{ product.price }} RON</span>
+    <div class="button-container">
+        @if (!canEdit) {
+        <button mat-raised-button color="primary" (click)="addToCart()">
+            Add to Cart
+        </button>
+        } @else {
+        <button mat-raised-button color="primary" (click)="editproduct()">
+            Edit
+        </button>
+        <button mat-raised-button color="primary" (click)="deleteproduct()">
+            Delete
+        </button>
+        }
+        <button mat-button color="primary" (click)="viewProduct()">View</button>
+    </div>
   </mat-card-content>
-
-  <mat-card-actions>
-    @if (!canEdit) {
-      <button class="product-card-button" mat-raised-button color="primary" (click)="addToCart()">
-        Add to Cart
-      </button>
-    } @else {
-      <button class="product-card-button" mat-raised-button color="primary" (click)="editproduct()">
-        Edit
-      </button>
-      <button class="product-card-button" mat-raised-button color="primary" (click)="deleteproduct()">
-        Delete
-      </button>
-    }
-    <button mat-button color="primary" (click)="viewProduct()">View</button>
-  </mat-card-actions>
 </mat-card>
+
