--- a/sellsavvy/src/app/components/paged-table/paged-table.component.html
+++ b/sellsavvy/src/app/components/paged-table/paged-table.component.html
@@ -1,7 +1,20 @@
+@if (!canEdit) {
+<div class="search-container">
+  <mat-form-field class="search-field">
+    <mat-label>Search</mat-label>
+    <input matInput placeholder="Search articles" />
+  </mat-form-field>
+</div>
+
+}
 <mat-grid-list [cols]="columns" rowHeight="400px">
   @for(product of products; track product){
   <mat-grid-tile
-    ><product-card [loggedInUser]="loggedInUser" [product]="product" [canEdit]="canEdit"></product-card
+    ><product-card
+      [loggedInUser]="loggedInUser"
+      [product]="product"
+      [canEdit]="canEdit"
+    ></product-card
   ></mat-grid-tile>
   }
 </mat-grid-list>
