--- a/sellsavvy/src/app/components/paged-table/paged-table.component.html
+++ b/sellsavvy/src/app/components/paged-table/paged-table.component.html
@@ -4,6 +4,8 @@
     <mat-label>Search</mat-label>
     <input matInput placeholder="Search articles" />
   </mat-form-field>
+
+  <button mat-fab color="primary"><mat-icon>search</mat-icon></button>
 </div>
 
 }
