--- a/sellsavvy/src/app/components/paged-table/paged-table.component.html
+++ b/sellsavvy/src/app/components/paged-table/paged-table.component.html
@@ -2,7 +2,7 @@
 <div class="search-container">
   <mat-form-field class="search-field">
     <mat-label>Search</mat-label>
-    <input matInput placeholder="Search articles" />
+    <input matInput placeholder="Search products" />
   </mat-form-field>
 
   <button mat-fab color="primary"><mat-icon>search</mat-icon></button>
