--- a/sellsavvy/src/app/pages/profile-page/profile-page.component.html
+++ b/sellsavvy/src/app/pages/profile-page/profile-page.component.html
@@ -27,5 +27,7 @@
     Add address
   </button>
 
+  <button mat-raised-button color="primary" (click)="logout()">Logout</button>
+
   <address-list></address-list>
 </div>
