--- a/sellsavvy/src/app/forms/profile-form/profile-form.component.html
+++ b/sellsavvy/src/app/forms/profile-form/profile-form.component.html
@@ -1,25 +1,27 @@
 @if (form) {
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <mat-form-field>
-    <mat-label> Phone number </mat-label>
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="update-form">
+  <mat-form-field class="full-width">
+    <mat-label>Phone number</mat-label>
     <input matInput type="text" formControlName="phoneNumber" />
   </mat-form-field>
-  <mat-form-field>
-    <mat-label> Email </mat-label>
+  <mat-form-field class="full-width">
+    <mat-label>Email</mat-label>
     <input matInput type="email" formControlName="email" />
   </mat-form-field>
-  <mat-form-field>
-    <mat-label> Description </mat-label>
+  <mat-form-field class="full-width">
+    <mat-label>Description</mat-label>
     <textarea matInput formControlName="description"></textarea>
   </mat-form-field>
-  <mat-form-field>
-    <mat-label> First name </mat-label>
+  <mat-form-field class="full-width">
+    <mat-label>First name</mat-label>
     <input matInput type="text" formControlName="firstName" />
   </mat-form-field>
-  <mat-form-field>
-    <mat-label> Last name </mat-label>
+  <mat-form-field class="full-width">
+    <mat-label>Last name</mat-label>
     <input matInput type="text" formControlName="lastName" />
   </mat-form-field>
-  <button mat-raised-button color="primary" type="submit">Update</button>
+  <button mat-raised-button color="primary" type="submit" class="submit-button">
+    Update
+  </button>
 </form>
 }
