--- a/sellsavvy/src/app/pages/selling-page/selling-page.component.html
+++ b/sellsavvy/src/app/pages/selling-page/selling-page.component.html
@@ -1,1 +1,3 @@
-<p>selling-page works!</p>
+@for(order of orders; track orders) {
+<sold-item [value]="order" (status)="updateOrder($event)"></sold-item>
+}
