Solve file upload

--- a/sellsavvy/src/app/forms/profile-form/profile-form.component.html
+++ b/sellsavvy/src/app/forms/profile-form/profile-form.component.html
@@ -23,5 +23,6 @@
   <button mat-raised-button color="primary" type="submit" class="submit-button">
     Update
   </button>
+  <file-picker [maxFiles]="1" fileFilter=".png" (filesSelected)="onFilesSelected($event)"></file-picker>
 </form>
 }
