--- a/sellsavvy/src/app/components/followers/followers.component.html
+++ b/sellsavvy/src/app/components/followers/followers.component.html
@@ -1,3 +1,4 @@
+<!-- src/app/followers/followers.component.html -->
 <div fxLayout="column" fxLayoutAlign="start stretch">
   <mat-card *ngFor="let follower of followers" class="follower-card">
     <mat-card-header>
@@ -13,5 +14,14 @@
         >{{ follower.postedProducts }} Products</mat-card-subtitle
       >
     </mat-card-header>
+    <mat-card-actions>
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="toggleFollow(follower)"
+      >
+        {{ follower.isFollowing ? "Unfollow" : "Follow" }}
+      </button>
+    </mat-card-actions>
   </mat-card>
 </div>
