--- a/sellsavvy/src/app/components/followers/followers.component.scss
+++ b/sellsavvy/src/app/components/followers/followers.component.scss
@@ -1,6 +1,6 @@
+/* src/app/followers/followers.component.css */
 .follower-card {
-  margin: 10px auto;
-  width: 50%;
+  margin: 10px 0;
 }
 
 .profile-picture {
@@ -8,6 +8,11 @@
   height: 40px;
   border-radius: 50%;
   background-size: cover;
+}
+
+mat-card-actions {
+  display: flex;
+  justify-content: flex-end;
 }
 
 @media (max-width: 600px) {
